# abicus

./: .gitignore  Cleanups.md  README.md  SPEC.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh
abicus/: __main__.py  server.py  templating.py  version.py
abicus/apps/assets/: fx_rates.py  pipeline.py  router.py
abicus/apps/assets/parsers/: broker_a.py
abicus/apps/assets/static/: assets.css  assets.js
abicus/apps/assets/templates/: page.html
abicus/apps/claims/: db.py  files.py  router.py  status.py
abicus/apps/claims/static/: claims.css  claims.js
abicus/apps/claims/templates/: page.html
abicus/apps/loan/: config.py  router.py  simulate.py
abicus/apps/loan/static/: loan.css  loan.js
abicus/apps/loan/templates/: page.html
abicus/apps/outflows/: build_mapping.py  db.py  html_export.py  pdf_export.py  router.py  transaction_history.py
abicus/apps/outflows/config/: html_export.json.example
abicus/apps/outflows/parsers/: format_e.py
abicus/apps/outflows/static/: breakdown.css  breakdown.js  history.css  history.js  mapping.css  mapping.js  outflows.css  outflows.js
abicus/apps/outflows/templates/: breakdown.html  history.html  mapping.html  page.html
abicus/shell/static/css/: components.css  shell.css  tokens.css
abicus/shell/static/js/: api.js  shell.js
abicus/shell/templates/: _sidebar.html  base.html
scripts/: migrate_from_legacy.sh
tests/: conftest.py  test_assets_routes.py  test_claims_routes.py  test_loan_routes.py  test_outflows_routes.py  test_server_boots.py
